# summarise_business

./: Dockerfile  README.md  config.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
app/: main.py
