[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "summarise_business"
authors = [
    {name = "David Oliver Cortadellas", email = "d.oliver.cort@gmail.com"},
]
description = "Summarise business description"
requires-python = ">=3.9"
keywords = ["summarise"]
classifiers = [
    # Indicate who your project is intended for
    "Intended Audience :: Document operators",
    "Topic :: Summarisation",

    # Specify the Python versions you support here.
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version", "dependencies", "readme"]

[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
readme = {file = ["README.md"]}


[tool.ruff]
line-length = 100
target-version = "py39"
src = ["app"]  # Allow imports relative to the "app" directories.
include = ["pyproject.toml", "app/**/*.py"]

[tool.ruff.lint]
# On top of the default `select` (`E4`, E7`, `E9`, `F`), 
# enable pycodestyle warnings (`W`) orMcCabe complexity (`C901`)
select = [
    "E",  # pycodestyle
    "W",  # pycodestyle
    "F",  # Pyflakes
    "B",  # flake8-bugbear
    "Q",  # flake8-quotes
    "I",  # isort
    "N",  # pep8-naming
    "C90",
    "UP", # pyupgrade
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
files = ["app",]
python_version = "3.11"
warn_unused_configs = true
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["app.*",]